@@ -1,70 +1,102 @@
-# Getting Started with Create React App
+<!-- PROJECT LOGO -->
+<br/>
+<div align="center">
+    <h3 align="center">Robot Control System - Frontend</h3>
+    <p align="center">
+        As the author of this project, Liang Houdong, I have completed it as part of a coding assessment, reserving all copyright rights.
+    </p>
+    <p align="center">
+        This project represents the frontend component of the robot control system. It offers users a user-friendly interface to efficiently control a remote robot's operations.
+    </p>
+</div>
+<br/>
 
-This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).
+<!-- ABOUT THE PROJECT -->
 
-## Available Scripts
+## About The Project
 
-In the project directory, you can run:
+![Frontend Screenshot][frontend-screenshot]
 
-### `npm start`
+### Built With
 
-Runs the app in the development mode.\
-Open [http://localhost:3000](http://localhost:3000) to view it in your browser.
+- [![HTML][HTML]][HTML-url]
+- [![CSS][CSS]][CSS-url]
+- [![JavaScript][JavaScript]][JavaScript-url]
+- [![React][React]][React-url]
 
-The page will reload when you make changes.\
-You may also see any lint errors in the console.
+<!-- GETTING STARTED -->
 
-### `npm test`
+## Getting Started
 
-Launches the test runner in the interactive watch mode.\
-See the section about [running tests](https://facebook.github.io/create-react-app/docs/running-tests) for more information.
+Please follow the instructions below to set up your frontend system locally:
 
-### `npm run build`
+### Prerequisites
 
-Builds the app for production to the `build` folder.\
-It correctly bundles React in production mode and optimizes the build for the best performance.
+- Node v18.16.0+
+- Node Package Manager (NPM) 9.5.1+
 
-The build is minified and the filenames include the hashes.\
-Your app is ready to be deployed!
+### Running
 
-See the section about [deployment](https://facebook.github.io/create-react-app/docs/deployment) for more information.
+1. Clone the repo
+   ```sh
+   git clone
+   ```
+2. Open the project using IntelliJ or equivalent IDEs and run the project
+3. Or run the following command in the root directory:
+   ```sh
+   mvn clean javafx:run
+   ```
+4. Or run the executable jar file using the following command in the root directory:
+   ```sh
+   mvn clean package
+   ```
+   ```
+   java --module-path [your own javafx lib path] --add-modules javafx.controls,javafx.fxml -jar target/VisualNeo-1.0.0.jar
+   ```
+   JavaFX is separated from JDK 11+ and needed to installed independently by users. To download JavaFX, click [here](https://gluonhq.com/products/javafx/). Use the path of lib directory as your command line input.
 
-### `npm run eject`
+<!-- USAGE EXAMPLES -->
 
-**Note: this is a one-way operation. Once you `eject`, you can't go back!**
+## Usage
 
-If you aren't satisfied with the build tool and configuration choices, you can `eject` at any time. This command will remove the single build dependency from your project.
+Here is a quick guideline of how the system can be used.
 
-Instead, it will copy all the configuration files and the transitive dependencies (webpack, Babel, ESLint, etc) right into your project so you have full control over them. All of the commands except `eject` will still work, but they will point to the copied scripts so you can tweak them. At this point you're on your own.
+1. Load the remote or local database by providing security data (uri, username, password)
+   ![Load Database Screen Shot][load-database-screenshot]
+2. View the metadata of the loaded database
+   ![Database Metadata Screen Shot][database-metadata-screenshot]
+3. Construct graph queries by pressing:
 
-You don't have to ever use `eject`. The curated feature set is suitable for small and middle deployments, and you shouldn't feel obligated to use this feature. However we understand that this tool wouldn't be useful if you couldn't customize it when you are ready for it.
+   **Shift**: Create nodes/edges
 
-## Learn More
+   **Ctrl**: Select multiple nodes/edges
 
-You can learn more in the [Create React App documentation](https://facebook.github.io/create-react-app/docs/getting-started).
+   **Backspace/Delete**: Delete nodes/edges
 
-To learn React, check out the [React documentation](https://reactjs.org/).
+4. Save/Load self-defined patterns (if needed)
+5. Load the recommended patterns from file (if needed)
+   ![Load Recommended Pattern Screen Shot][load-pattern-screenshot]
+6. Fire the search and view the returned results
+   ![Display Result Screen Shot][display-result-screenshot]
 
-### Code Splitting
+_For more examples, please refer to the manual._
 
-This section has moved here: [https://facebook.github.io/create-react-app/docs/code-splitting](https://facebook.github.io/create-react-app/docs/code-splitting)
+<!-- CONTACT -->
 
-### Analyzing the Bundle Size
+## Contact
 
-This section has moved here: [https://facebook.github.io/create-react-app/docs/analyzing-the-bundle-size](https://facebook.github.io/create-react-app/docs/analyzing-the-bundle-size)
+LIANG Houdong - [Personal Website](https://dongdong3272.github.io/) - Email: holiang@ucsd.edu
 
-### Making a Progressive Web App
+<!-- MARKDOWN LINKS & IMAGES -->
+<!-- https://www.markdownguide.org/basic-syntax/#reference-style-links -->
 
-This section has moved here: [https://facebook.github.io/create-react-app/docs/making-a-progressive-web-app](https://facebook.github.io/create-react-app/docs/making-a-progressive-web-app)
-
-### Advanced Configuration
-
-This section has moved here: [https://facebook.github.io/create-react-app/docs/advanced-configuration](https://facebook.github.io/create-react-app/docs/advanced-configuration)
-
-### Deployment
-
-This section has moved here: [https://facebook.github.io/create-react-app/docs/deployment](https://facebook.github.io/create-react-app/docs/deployment)
-
-### `npm run build` fails to minify
-
-This section has moved here: [https://facebook.github.io/create-react-app/docs/troubleshooting#npm-run-build-fails-to-minify](https://facebook.github.io/create-react-app/docs/troubleshooting#npm-run-build-fails-to-minify)
+[frontend-screenshot]: public/frontend_screenshot.png
+[backend-screenshot]: public/backend_screenshot.png
+[JavaScript]: https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black
+[JavaScript-url]: https://developer.mozilla.org/en-US/docs/Web/JavaScript
+[React]: https://img.shields.io/badge/React-61DAFB?style=for-the-badge&logo=react&logoColor=black
+[React-url]: https://reactjs.org/
+[HTML]: https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white
+[HTML-url]: https://developer.mozilla.org/en-US/docs/Web/HTML
+[CSS]: https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white
+[CSS-url]: https://developer.mozilla.org/en-US/docs/Web/CSS
